-
Bug
-
Resolution: Fixed
-
Major
-
None
-
9223372036854775807
llapi_layout_get_by_fd() contains this code which uses lmm_stripe_count without first checking if the lov_user_md needs to be byte-swapped. This causes a false error on PowerPC clients.
if (!S_ISDIR(st.st_mode) && object_count != lum->lmm_stripe_count) { errno = EINTR; goto out; }
- is related to
-
LU-2973 lov_mds_md not swabbed in ll_getxattr
-
- Closed
-