LU-6536 llapi: lmm_stripe_count used unswabbed

The function llapi_layout_get_by_fd() uses the value
lum->lmm_stripe_count without first checking if it needs
to be swabbed.  This causes a false error on PowerPC clients
because the lov_user_md data appears corrupted.

Signed-off-by: Ned Bass <bass6@llnl.gov>
Change-Id: I5aacbd5804c784ec8231d51f8c93645fda077102
Reviewed-on: http://review.whamcloud.com/14633
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: Emoly Liu <emoly.liu@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>